249

- Fix failure when system properties modified when loading configuration
- Update Jackson to 2.17.1
- Update Jersey to 3.1.7
- Support generic list and set injection into configuration classes
- Update Jetty to 12.0.10
- Update HdrHistogram to 2.2.2
- Allow configuring Jetty's header cache case-sensitiveness
- Reject X-Forwarded-* headers if http-server.process-forwarded is false
- Add HTTP protocol version to client traces
- Improve request/response metrics accuracy and correctness
- Update Airbase to 157
- Remove deprecation notices/annotations from `enableLegacyUriCompliance()`
- Add support for request body streaming to http client
- Add support for ALPN and encrypted HTTP/2 to the server and the client
- Sanitize JMX metric name

248

- Update Jetty to 12.0.9

247

- Fix failure in DelimitedRequestLogHandler when reporting early
  request exceptions.
- Fail decoding with JsonCodec when content is not single JSON value.
  Previously the codec decoded first JSON value only, ignoring the rest
  of the payload.
- Support Guice providers in HTTP announcement custom properties.
- Allow only `@DefunctConfig` class without `@Config` annotation
- Update airbase to 156
- Update bouncycastle to 1.78.1

246

- Exclude getter-like record methods from JSON serialization

245

- Update bouncycastle to 1.78
- Add SUSPICIOUS_PATH_CHARACTERS to LegacyUriCompliance list

244

- Update jetty to 12.0.8
- Update byte-buddy to 1.14.13
- Update jackson to 2.17.0
- Restore previous recycler pool implementation in Jackson
- Update jaxb-runtime to 4.0.5
- Update HdrHistogram to 2.1.12
- Update log4j-to-slf4j to 2.23.1
- Update bouncycastle to 1.77

243

- Use pipe as separator for openmetrics object names config
- Add support for Jetty legacy URI compliance
- Fix deserializing JSON with large keys
- Update airbase to 153

242
- Update airbase to 151
- Update Jetty to 12.0.7 and EE10
- Add support for using virtual threads in the server
- Update byte-buddy to 1.14.12